[Bug fix] button now visible on small screens (probably out of the screen).

--- a/css/custom.css
+++ b/css/custom.css
@@ -54,7 +54,6 @@
         background-color: inherit ;
         position: fixed;
         width: 100%;
-        left: 300px;
         z-index: 1;
     }
     .button-container{
